Collision/CollisionWorld.cs

using System;
using System.Runtime.InteropServices;
using System.Security;

namespace BulletSharp
{
	public class CollisionWorld
	{
		public class LocalShapeInfo
		{
			internal IntPtr _native;

			public LocalShapeInfo()
			{
				_native = btCollisionWorld_LocalShapeInfo_new();
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btCollisionWorld_LocalShapeInfo_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~LocalShapeInfo()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btCollisionWorld_LocalShapeInfo_new();
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btCollisionWorld_LocalShapeInfo_delete(IntPtr obj);
		}

		public class LocalRayResult
		{
			internal IntPtr _native;

			public LocalRayResult(CollisionObject collisionObject, LocalShapeInfo localShapeInfo, Vector3 hitNormalLocal, float hitFraction)
			{
				_native = btCollisionWorld_LocalRayResult_new(collisionObject._native, localShapeInfo._native, ref hitNormalLocal, hitFraction);
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btCollisionWorld_LocalRayResult_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~LocalRayResult()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern IntPtr btCollisionWorld_LocalRayResult_new(IntPtr collisionObject, IntPtr localShapeInfo, [In] ref Vector3 hitNormalLocal, float hitFraction);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btCollisionWorld_LocalRayResult_delete(IntPtr obj);
		}

		public class RayResultCallback
		{
			internal IntPtr _native;

			public float AddSingleResult(LocalRayResult rayResult, bool normalInWorldSpace)
			{
				return btCollisionWorld_RayResultCallback_addSingleResult(_native, rayResult._native, normalInWorldSpace);
			}

            public bool NeedsCollision(BroadphaseProxy proxy0)
            {
                return btCollisionWorld_RayResultCallback_needsCollision(_native, proxy0._native);
            }

            public float ClosestHitFraction
            {
                get { return btCollisionWorld_RayResultCallback_getClosestHitFraction(_native); }
                set { btCollisionWorld_RayResultCallback_setClosestHitFraction(_native, value); }
            }

            public short CollisionFilterGroup
            {
                get { return btCollisionWorld_RayResultCallback_getCollisionFilterGroup(_native); }
                set { btCollisionWorld_RayResultCallback_setCollisionFilterGroup(_native, value); }
            }

            public short CollisionFilterMask
            {
                get { return btCollisionWorld_RayResultCallback_getCollisionFilterMask(_native); }
                set { btCollisionWorld_RayResultCallback_setCollisionFilterMask(_native, value); }
            }

            public CollisionObject CollisionObject
            {
                get { return CollisionObject.GetManaged(btCollisionWorld_RayResultCallback_getCollisionObject(_native)); }
                set { btCollisionWorld_RayResultCallback_setCollisionObject(_native, value._native); }
            }

            public uint Flags
            {
                get { return btCollisionWorld_RayResultCallback_getFlags(_native); }
                set { btCollisionWorld_RayResultCallback_setFlags(_native, value); }
            }

			public bool HasHit
			{
				get { return btCollisionWorld_RayResultCallback_hasHit(_native); }
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btCollisionWorld_RayResultCallback_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~RayResultCallback()
			{
				Dispose(false);
			}

            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern float btCollisionWorld_RayResultCallback_addSingleResult(IntPtr obj, IntPtr rayResult, bool normalInWorldSpace);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern float btCollisionWorld_RayResultCallback_getClosestHitFraction(IntPtr obj);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern short btCollisionWorld_RayResultCallback_getCollisionFilterGroup(IntPtr obj);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern short btCollisionWorld_RayResultCallback_getCollisionFilterMask(IntPtr obj);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern IntPtr btCollisionWorld_RayResultCallback_getCollisionObject(IntPtr obj);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern uint btCollisionWorld_RayResultCallback_getFlags(IntPtr obj);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern bool btCollisionWorld_RayResultCallback_hasHit(IntPtr obj);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern bool btCollisionWorld_RayResultCallback_needsCollision(IntPtr obj, IntPtr proxy0);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_RayResultCallback_setClosestHitFraction(IntPtr obj, float closestHitFraction);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_RayResultCallback_setCollisionFilterGroup(IntPtr obj, short collisionFilterGroup);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_RayResultCallback_setCollisionFilterMask(IntPtr obj, short collisionFilterMask);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_RayResultCallback_setCollisionObject(IntPtr obj, IntPtr collisionObject);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_RayResultCallback_setFlags(IntPtr obj, uint flags);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btCollisionWorld_RayResultCallback_delete(IntPtr obj);
		}

		public class ClosestRayResultCallback : RayResultCallback
		{
            public ClosestRayResultCallback(ref Vector3 rayFromWorld, ref Vector3 rayToWorld)
            {
                _native = btCollisionWorld_ClosestRayResultCallback_new(ref rayFromWorld, ref rayToWorld);
            }

			public ClosestRayResultCallback(Vector3 rayFromWorld, Vector3 rayToWorld)
			{
				_native = btCollisionWorld_ClosestRayResultCallback_new(ref rayFromWorld, ref rayToWorld);
			}

            public Vector3 HitNormalWorld
            {
                get
                {
                    Vector3 hitNormalWorld;
                    btCollisionWorld_ClosestRayResultCallback_getHitNormalWorld(_native, out hitNormalWorld);
                    return hitNormalWorld;
                }
                set { btCollisionWorld_ClosestRayResultCallback_setHitNormalWorld(_native, ref value); }
            }

            public Vector3 HitPointWorld
            {
                get
                {
                    Vector3 hitPointWorld;
                    btCollisionWorld_ClosestRayResultCallback_getHitPointWorld(_native, out hitPointWorld);
                    return hitPointWorld;
                }
                set { btCollisionWorld_ClosestRayResultCallback_setHitPointWorld(_native, ref value); }
            }

            public Vector3 RayFromWorld
            {
                get
                {
                    Vector3 rayFromWorld;
                    btCollisionWorld_ClosestRayResultCallback_getRayFromWorld(_native, out rayFromWorld);
                    return rayFromWorld;
                }
                set { btCollisionWorld_ClosestRayResultCallback_setRayFromWorld(_native, ref value); }
            }

            public Vector3 RayToWorld
            {
                get
                {
                    Vector3 rayToWorld;
                    btCollisionWorld_ClosestRayResultCallback_getRayToWorld(_native, out rayToWorld);
                    return rayToWorld;
                }
                set { btCollisionWorld_ClosestRayResultCallback_setRayToWorld(_native, ref value); }
            }

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern IntPtr btCollisionWorld_ClosestRayResultCallback_new([In] ref Vector3 rayFromWorld, [In] ref Vector3 rayToWorld);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_ClosestRayResultCallback_getRayFromWorld(IntPtr obj, [Out] out Vector3 rayFromWorld);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_ClosestRayResultCallback_getRayToWorld(IntPtr obj, [Out] out Vector3 rayToWorld);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_ClosestRayResultCallback_getHitNormalWorld(IntPtr obj, [Out] out Vector3 hitNormalWorld);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_ClosestRayResultCallback_getHitPointWorld(IntPtr obj, [Out] out Vector3 hitPointWorld);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_ClosestRayResultCallback_setRayFromWorld(IntPtr obj, [In] ref Vector3 rayFromWorld);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_ClosestRayResultCallback_setRayToWorld(IntPtr obj, [In] ref Vector3 rayToWorld);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_ClosestRayResultCallback_setHitNormalWorld(IntPtr obj, [In] ref Vector3 hitNormalWorld);
            [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
            static extern void btCollisionWorld_ClosestRayResultCallback_setHitPointWorld(IntPtr obj, [In] ref Vector3 hitPointWorld);
		}

		public class AllHitsRayResultCallback : RayResultCallback
		{
			public AllHitsRayResultCallback(Vector3 rayFromWorld, Vector3 rayToWorld)
			{
				_native = btCollisionWorld_AllHitsRayResultCallback_new(ref rayFromWorld, ref rayToWorld);
			}
